src/test/resources/valid_programs/double_literal_forms.notc
void main() {
    printInt(.25 == 0.25);
    printInt(-0.125 == -.125);
}
