src/test/resources/semantic_errors/printInt_with_double_call.notc
double returnsDouble() {
    return 2.0;
}

void main() {
    printInt(returnsDouble);
}
